--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -45,7 +45,7 @@
 <div class="container">
 
     <div class="blog-header">
-        <h1 class="blog-title"><a class="main" href="{{ path('_index') }}"> MY FIRST BLOG </a><a class="btn btn-primary" href="{{ path('_new') }}">Create a new entry</a></h1>
+        <h1 class="blog-title"><a class="main" href="{{ path('_index') }}"> MY FIRST BLOG!! </a><a class="btn btn-primary" href="{{ path('_new') }}">Create a new entry</a></h1>
 
         <p class="lead blog-description">The official example template of creating a blog with Bootstrap.</p>
     </div>
